# Personal_System1.0

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  init_db.py  main.py  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.py  test_simple.py
.gemini/: settings.json
.supply-chain-risk-auditor/: results.md
alembic/: env.py
alembic/versions/: 5727ef39316f_alterar_data_aula_para_datetime.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d0d083d605c_add_exercises_and_training_plans.py  9d90b56e2675_add_student_status.py  a5e3f4b2c1d0_add_email_to_aluno.py  a9b8c7d6e5f4_add_ordem_to_prescricoes.py  bbca75959dbb_initial_migration.py  c3f8b2a1d5e6_add_trainer_id_to_alunos.py  d72ea2a83e57_initial_full_schema.py  dbaa45ac26b4_make_aluno_id_optional_and_add_duracao_.py  e85ce345def4_add_tipo_pagamento_e_saldo_aulas.py  e8c2d9b5a1f1_add_metodo_to_prescricao.py  f1a2b3c4d5e6_add_tipo_atividade_to_sessoes.py
backend/src/: api.py  config.py  controllers.py  create_admin.py  database.py  debug.py  exceptions.py  models.py  reset_db.py  schemas.py  security.py  seed_exercicios.py
backend/src/routes/: admin.py  alunos.py  auth.py  exercicios.py  meu_perfil.py  pagamentos.py  planos.py  prescricoes.py  sessoes.py
backend/src/views/: dashboard_view.py
backend/tests/: conftest.py  test_alunos.py  test_correcoes_auditoria.py  test_planos_treino.py  test_regras_criticas.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: CardExercicio.jsx  PlanoTreinoCard.jsx  ToastProvider.jsx  TreinoCard.jsx
frontend/src/features/admin/: PainelAdmin.jsx
frontend/src/features/alunos/: DetalhaAluno.jsx  DetalheAluno.jsx  FormAlunoModal.jsx  FormPlanoTreino.jsx  FormPlanotreino.jsx  ListaAlunos.jsx  ModalPlanoTreino.jsx
frontend/src/features/auth/: LoginView.jsx
frontend/src/features/financeiro/: CardsKPI.jsx  DashboardFinanceiro.jsx  (+2 more)
frontend/src/services/: api.js
personal-web/: package-lock.json  package.json
personal-web/src/: App.jsx
semgrep_rules/fastapi-sqli/: fastapi-sqli.py  fastapi-sqli.yaml
src/: api.py  controllers.py  database.py  exceptions.py  init_db.py  main.py  models.py  schemas.py
src/routes/: alunos.py
src/views/: cadastrar_aluno_view.py  dashboard_view.py  login_view.py  montar_treino_view.py
tests/: test_alunos.py
(+8 files in other folders)
