[project]
name = "personal-system1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "PyJWT>=2.10.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
