[project]
name = "personal-system1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "flet[all]>=0.80.2",
    "ngrok>=1.7.0",
    "pydantic-settings>=2.8.1",
    "bcrypt>=4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "validate-docbr>=1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
