[project]
name = "personal-system1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.8.1",
    "bcrypt>=4.0.1",
    "PyJWT>=2.10.1",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "validate-docbr>=1.11.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
